Fix jumpiness on hours update during menu expand.

--- a/src/css/utk-lib-header.css
+++ b/src/css/utk-lib-header.css
@@ -2004,7 +2004,7 @@ a:hover {
   opacity: 1; }
 
 .utk-resources-contact {
-  max-width: calc(100% - (100% / 1.61803));
+  width: calc(100% - (100% / 1.61803));
   opacity: 0;
   z-index: 1;
   height: auto;
