--- a/src/scss/components/_resources.scss
+++ b/src/scss/components/_resources.scss
@@ -130,7 +130,7 @@
 }
 
 .utk-resources-contact {
-  max-width: $gr-short;
+  width: $gr-short;
   opacity: 0;
   z-index: 1;
   height: auto;
